--- a/sass/layout/_examples.scss
+++ b/sass/layout/_examples.scss
@@ -1,3 +1,8 @@
+@media screen and (max-width: 480px) {
+    .examples {
+        display: none;
+    }
+}
 .examples {
     &__item {
         position: relative;
