--- a/sass/base/_card-set.scss
+++ b/sass/base/_card-set.scss
@@ -1,10 +1,6 @@
-.card-set {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-    &__item {
-        margin-left: 30px;
-        margin-top: 30px;
+@media screen and (max-width: 480px) {
+    .card-set {
+        display: block;
     }
+    
 }
