--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,16 @@
 .container {
-    width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
 }
+@media screen and (max-width: 480px) {
+    .container {
+        max-width: 480px;
+    }    
+}
+
+
+
+
+
