--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,6 @@
 .logo {
     font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    line-height: 1.2;
     color: $secondary-text-color;
-    display: inline-block;
     &--header {
         color: $logo-black;
     }
@@ -12,5 +9,14 @@
     }
     &--footer {
         color: $logo-white;
+    }
+}
+@media screen and (max-width: 480px) {
+    .logo {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 1.16;
+        display: block;
+        padding: 16px 0;
     }
 }
