--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,25 +1,27 @@
-.benefits {
-    padding-bottom: 0;
-    &__item {
-        flex-basis: calc(100% / 4 - 30px);
+@media screen and (max-width: 480px) {
+    .benefits {
+        padding-bottom: 0;
+       
+        &__title {
+            color: $header-text-color;
+            font-size: 14px;
+            line-height: 1.14;
+            text-align: center;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+        }
+        &__icon-wrapper {
+            height: 120px;
+            background-color: $secondary-color;
+            border-radius: 4px;
+            padding-top: 25px;
+            padding-bottom: 25px;
+            margin-bottom: 30px;
+        }
+        &__icon {
+            margin-left: auto;;
+            margin-right: auto;
+        }
     }
-    &__title {
-        color: $header-text-color;
-        font-size: 14px;
-        line-height: 1.14;
-        text-transform: uppercase;
-        margin-bottom: 10px;
-    }
-    &__icon-wrapper {
-        height: 120px;
-        background-color: $secondary-color;
-        border-radius: 4px;
-        padding-top: 25px;
-        padding-bottom: 25px;
-        margin-bottom: 30px;
-    }
-    &__icon {
-        margin-left: auto;;
-        margin-right: auto;
-    }
+    
 }
