--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,19 +1,29 @@
-.clients {
-    &__link {
-        height: 92px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid $icon-grey;
-        border-radius: 4px;
-        fill: $icon-grey;
-        transition: fill $transition-time $cubic, border $transition-time $cubic;
-        &:hover, &:focus {
-            border: 1px solid $secondary-text-color;
-            fill: $secondary-text-color;
+@media screen and (max-width: 480px) {
+    .clients {
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -30px;
+            margin-top: -30px;
         }
-    }
-    &__item {
-        flex-basis: calc(100% / 6 - 30px);
+        &__link {
+            height: 92px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid $icon-grey;
+            border-radius: 4px;
+            fill: $icon-grey;
+            transition: fill $transition-time $cubic, border $transition-time $cubic;
+            &:hover, &:focus {
+                border: 1px solid $secondary-text-color;
+                fill: $secondary-text-color;
+            }
+        }
+        &__item {
+            margin-left: 30px;
+            margin-top: 10px;
+            flex-basis: calc(100% / 2 - 30px);
+        }
     }
 }
