--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,22 @@
+.footer {
+    background-color: $hero-footer-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    &-join__text,
+        &-subscribe__text {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.14;
+            text-transform: uppercase;
+            color: $logo-white;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+}
 @media screen and (max-width: 480px) {
     .footer {
         text-align: center;
-        background-color: $hero-footer-color;
-        padding-top: 60px;
-        padding-bottom: 60px;
+        
         
         
         &__logo {
@@ -11,6 +24,9 @@
         }
         &-address {
             font-style: inherit;
+        }
+        &-address__list {
+            margin-bottom: 60px;
         }
         &-address__item:not(:last-child) {
             margin-bottom: 9px;
@@ -26,27 +42,20 @@
             }
         }
         &-join__container {
-            max-width: 206px;
+            max-width: 100%;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 60px;
         }
-        &-join__text,
-        &-subscribe__text {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 1.14;
-            text-transform: uppercase;
-            color: $logo-white;
-            margin-bottom: 20px;
-            display: inline-block;
-        }
+        
         &-subscribe__container {
             margin-left: auto;
         }
         &-subscribe__input {
-            width: 358px;
+            max-width: 100%;
             height: 50px;
-            margin-right: 12px;
+            margin-bottom: 20px;
+            
             
             border: 1px solid rgba(255, 255, 255, 0.3);
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
