--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -43,9 +43,10 @@
         }
         &-join__container {
             max-width: 100%;
-            margin-left: auto;
-            margin-right: auto;
             margin-bottom: 60px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         
         &-subscribe__container {
