--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,27 +1,32 @@
-.team {
-    background-color: $secondary-color;
-    &__item {
-        background: $logo-white;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        text-align: center;
-        flex-basis: calc(100% / 4 - 30px);
-    }
-    &__content {
-        padding: 30px;
-    }
-    &__member {
-        color: $header-text-color;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.18;
-        margin-bottom: 10px;
-    }
-    &__job {    
-        font-size: 16px;
-        line-height: 1.18;
-        margin-bottom: 16px;
+@media screen and (max-width: 480px) {
+    .team {
+        background-color: $secondary-color;
+        &__item {
+            background: $logo-white;
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+            0px 1px 1px rgba(0, 0, 0, 0.14),
+            0px 2px 1px rgba(0, 0, 0, 0.2);
+            border-radius: 0px 0px 4px 4px;
+            text-align: center;
+            flex-basis: calc(100% / 4 - 30px);
+        }
+        &__content {
+            padding: 30px 15px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__member {
+            color: $header-text-color;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.18;
+            margin-bottom: 10px;
+        }
+        &__job {    
+            font-size: 16px;
+            line-height: 1.18;
+            margin-bottom: 16px;
+        }
     }
 }
