--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,11 +1,13 @@
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    &__title {
-        color: $header-text-color;
-        font-size: 36px;
-        line-height: 1.16;
-        margin-bottom: 50px;
-        text-align: center;
+@media screen and (max-width: 480px) {
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        &__title {
+            color: $header-text-color;
+            font-size: 28px;
+            line-height: 1.17;
+            margin-bottom: 30px;
+            text-align: center;
+        }
     }
 }
