--- a/css/main.css
+++ b/css/main.css
@@ -330,8 +330,10 @@ body {
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     text-align: center;
-    -ms-flex-preferred-size: calc(25% - 30px);
-        flex-basis: calc(25% - 30px);
+    margin-bottom: 30px;
+  }
+  .team__item:last-child {
+    margin-bottom: 0;
   }
   .team__content {
     padding: 30px 15px;
